# Commerce-AI-Assistant

./: .gitignore  Decision_log.md  README.md  app.py  contribution_document.md  main.py  product_document.md  pyproject.toml  requirements.txt  technical_document.md
notebook/: trial.ipynb
src/: agent.py  chains.py  config.py  graph.py  ingest.py  loaders.py  memory.py  prompts.py  retriever.py  utils.py  websearch.py
static/: script.js  style.css
templates/: index.html
