[project]
name = "commerce-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "flask>=3.1.3",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchainhub>=0.1.21",
    "langgraph>=1.2.0",
    "pandas>=3.0.3",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "sentence-transformers>=5.5.0",
    "tiktoken>=0.13.0",
    "unstructured>=0.22.28",
]
